Update the Tag Description
Instead of having the tag in the README file, just
reference the release notes.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/README
+++ b/README
@@ -102,11 +102,19 @@ http://www.yoctoproject.org/docs/current/ref-manual/ref-manual.html
 3. Clone the Axxia meta layer. This provides meta data for building
    images for the Axxia specific board types.  See 'Sources' above to
    select the right meta-intel-axxia repository, branch, and version.
+   Use the 'rocko' branch or the tag specified in the release notes.
 
    $ cd $YOCTO
    $ (the git clone command chosen above)
    $ cd meta-intel-axxia
-   $ git checkout tags/snr_delivery11_linux4_12.rc2
+
+   If using the 'rocko' branch.
+
+   $ git checkout rocko
+
+   If using the tag specified in the releases notes.
+
+   $ git checkout tags/(the tag specified in the releases notes)
 
 4. The Open Embedded project provides many useful layers and packages
    such as networking. Download the Open Embedded Yocto Project hosted
