--- a/README
+++ b/README
@@ -381,9 +381,16 @@ NOTE: (preferred-provider) can be linux-yocto, linux-yocto-rt,
     RUNTARGET = "frio"
 
 9.8 Add simicsfs-client support (for large and sim images). Sources tgz archive
-    should copied in meta-intel-axxia/download directory: simics-5.0.140.tgz
+    should copied in meta-intel-axxia/download directory: simics-5.0.144.tgz
 
     DISTRO_FEATURES_append = " simicsfs"
+
+    To generate simics-5.0.1.44.tgz, get "ase_jvl_external*.txz" from
+    the SW download page (VIP), and do the following.
+
+    * tar xf ase_jvl_external*.txz
+    * 'cd ase/simics'
+    * tar cJf simics-<version>.txz simics-<version>
 
 9.9 Other optional settings for saving disk space and build time:
    
@@ -402,7 +409,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 PREFERRED_VERSION_linux-yocto = "4.12%"
 DISTRO = "intel-axxia"
 RUNTARGET = "simics"
-SIMICSFS = "yes"
+DISTRO_FEATURES_append = " simicsfs"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
