--- a/README
+++ b/README
@@ -381,7 +381,7 @@ NOTE: (preferred-provider) can be linux-yocto, linux-yocto-rt,
     RUNTARGET = "frio"
 
 9.8 Add simicsfs-client support (for large and sim images). Sources tgz archive
-    should copied in meta-intel-axxia/download directory: simics-5.0.144.tgz
+    should copied in meta-intel-axxia/downloads directory: simics-5.0.144.tgz
 
     DISTRO_FEATURES_append = " simicsfs"
 
@@ -390,7 +390,7 @@ NOTE: (preferred-provider) can be linux-yocto, linux-yocto-rt,
 
     * tar xf ase_jvl_external*.txz
     * 'cd ase/simics'
-    * tar cJf simics-<version>.txz simics-<version>
+    * tar czf simics-<version>.tgz simics-<version>
 
 9.9 Other optional settings for saving disk space and build time:
    
