Update the README
After installing the SDK, the following needs to be run

make clean oldconfig scripts tools/objtool

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/README
+++ b/README
@@ -483,7 +483,7 @@ older Linux host.
 
 source (install directory)/environment-setup*
 cd $SDKTARGETSYSROOT/usr/src/kernel
-make clean silentoldconfig scripts
+make clean oldconfig scripts tools/objtool
 
 12.2 Creating .craff Images for Simics
 
